--- a/src/app/events/components/tests-header/tests-header.component.scss
+++ b/src/app/events/components/tests-header/tests-header.component.scss
@@ -12,7 +12,6 @@
 .header {
   padding-bottom: $spacer;
   border-bottom: 1px solid $gray-200;
-  margin-bottom: $spacer;
 }
 
 @media (max-width: 750px) {
